mtls/httpbin-ingress-mtls.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: httpbin-mtls
  namespace: default
  labels:
    app: httpbin
  annotations:
    konghq.com/plugins: "httpbin-mtls"
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
  selector:
    app: httpbin
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: public-service
  namespace: default
  annotations: 
    konghq.com/strip-path: "false"
spec:
  ingressClassName: kong
  rules:
  - https:
      paths:
      - path: /ip
        pathType: Prefix
        backend:
          service:
            name: httpbin
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: confidential-route
  namespace: default
  annotations: 
    konghq.com/strip-path: "false"
    konghq.com/plugins: "httpbin-mtls"
spec:
  ingressClassName: kong
  rules:
  - https:
      paths:
      - path: /uuid
        pathType: Prefix
        backend:
          service:
            name: httpbin-mtls
            port:
              number: 80
