mtls/httpbin-services-mtls.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: public-service
  namespace: default
  annotations: 
    konghq.com/strip-path: "false"
spec:
  ingressClassName: kong
  rules:
  - http:
      paths:
      - path: /ip
        pathType: Prefix
        backend:
          service:
            name: httpbin
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: confidential-route
  namespace: default
  annotations: 
    konghq.com/strip-path: "false"
    konghq.com/plugins: "httpbin-mtls"
spec:
  ingressClassName: kong
  rules:
  - http:
      paths:
      - path: /uuid
        pathType: Prefix
        backend:
          service:
            name: httpbin
            port:
              number: 80
